--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,10 +2,12 @@
 #使用cvOpenFileStorage务必加在最顶上
 
 #from: euroc格式下mav0文件夹中的两个文件夹
-cam_path: "/home/jerry/Dataset/RS/STNEAR/02c/ip7/mav0/cam0"
-imu_path: "/home/jerry/Dataset/RS/STNEAR/02c/ip7/mav0/imu0"
+gs_cam_path: "/home/jerry/trajectory_1/fast/gs/clean"
+rs_cam_path: "/home/jerry/trajectory_1/fast/rs/clean"
+imu_path: "/home/jerry/trajectory_1/fast/imu"
 
 #to
-image_topic: "/camera0/image_raw"
+gs_image_topic: "/cam_gs/image_raw"
+rs_image_topic: "/cam_rs/image_raw"
 imu_topic: "/imu0"
 tobag_path: "/home/jerry/new.bag"
